# sc2statistics

./: .gitignore  README.md  manager.py  setup.cfg  setup.py  tox.ini
sc2statistics/: __init__.py  env.py  exceptions.py  game.py  loader.py  loging.py
sc2web/: cli.py  db.py  replay.py
sc2web/migrations/: env.py
sc2web/migrations/versions/: 2545500d4934_add_replay.py
sc2web/web/: app.py
sc2web/web/static/: .bowerrc  bower.json
sc2web/web/static/js/: api.js
sc2web/web/static/riotjs/: .bower.json
sc2web/web/templates/: base.html  replay.html  view_build.html
tests/: conftest.py
tests/assets/: test_replay.SC2Replay  test_replay2.SC2Replay
tests/sc2statistics/: test_game.py  test_load.py
tests/test_sc2statistics/: test_game.py  test_loader.py
tests/test_sc2web/: __init__.py  test_db_replay.py  test_replay.py  util.py
