[metadata]
name = sc2statistics
version = 0.1
description = Show SC2 build tree
long_description = file: README.md
long_description_content_type = text/markdown
keywords = starcraft2, sc2, starcraft

[options]
packages = find:
install_requires =
    mpyq==0.2.5
    s2protocol==4.8.2.71663.0

[options.extras_require]
tests =
    flake8
    flake8-import-order >= 0.18, < 0.19
    flake8-import-order-spoqa >= 1.4.1, < 1.5
    pytest >= 3.7.1
    pytest-flake8 >= 1.0.2, < 1.1
    tox >= 3.2.1
docs =
    Sphinx >= 1.7.6

[options.entry_points]
console_scripts =
    sc2web = sc2web.cli:main
